--- a/style.css
+++ b/style.css
@@ -2,8 +2,10 @@
   padding: 0;
   margin: 0;
   box-sizing: border-box;
+  font-family: "Hiragino Kaku Gothic ProN", "NotoSansCJKjp";;
 }
 
+/* ヘッダー */
 header {
   display: flex;
   justify-content: space-between;
@@ -15,7 +17,7 @@ header {
   padding: 0 120px;
 }
 
-.site-tittle {
+.site-title {
   font-size: 26px;
 }
 
@@ -34,4 +36,183 @@ header {
 
 li {
   list-style: none;
+}
+
+/* メイン */
+.section-wrapper {
+  padding: 100px 15% 50px;
+}
+
+.section-title {
+  font-size: 36px;
+  font-weight: bold;
+  text-align: center;
+  margin-bottom: 70px;
+}
+
+.subtitle {
+  font-size: 24px;
+  font-weight: bold;
+  line-height: 48px;
+}
+
+.contents {
+  padding-top: 45px;
+  font-size: 14px;
+  line-height: 30px;
+}
+
+/* fv */
+.first-view {
+  background-image: url(images/fv-bgi@2x.jpg);
+  height: 90vh;
+  background-size: cover;
+  background-position: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.fv-title {
+  color: #fff;
+  font-weight: bold;
+  font-size: 50px;
+  border: 2px solid #fff;
+  padding: 34px 42px;
+}
+
+/* service */
+.service-menu {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  align-items: center;
+}
+
+.service-menu-2 {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  align-items: center;
+  margin-top: 50px;
+}
+
+.service-content {
+  width: 480px;
+}
+
+.service-image {
+  background-image: url(images/service-image@2x.jpg);
+  width: 480px;
+  height: 240px;
+  background-size: cover;
+  background-position: center;
+}
+
+.service-image-2 {
+  background-image: url(images/service-image02@2x.jpg);
+  width: 480px;
+  height: 240px;
+  background-size: cover;
+  background-position: center;
+}
+
+/* news */
+.news-menu {
+  display: flex;
+  justify-content: space-between;
+}
+
+.news-content {
+  width: 320px;
+  height: 323px;
+  align-items: center;
+  margin-right: 34px;
+  box-shadow: 0px 0px 6px rgba(27, 19, 16, 0.4);
+}
+
+.news-content:nth-child(3) {
+  width: 320px;
+  height: 323px;
+  align-items: center;
+  box-shadow: 0px 0px 6px rgba(27, 19, 16, 0.4);
+}
+
+.news-image {
+  background-image: url(images/card-image1@2x.jpg);
+  height: 200px;
+}
+
+.news-image-2 {
+  background-image: url(images/card-image2@2x.jpg);
+  height: 200px;
+}
+
+.news-image-3 {
+  background-image: url(images/card-image3@2x.jpg);
+  height: 200px;
+}
+
+.contents-small {
+  font-size: 13px;
+  margin: 25px 33px;
+}
+
+/* お問い合わせ */
+.section-title-contatct {
+  font-size: 24px;
+  font-weight: bold;
+  text-align: center;
+  margin-bottom: 71px;
+}
+
+.contact-form {
+  margin: 0 auto;
+  width: 700px;
+  font-size: 16px;
+}
+
+.form-part {
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 25px;
+}
+
+label {
+  margin-bottom: 5px;
+}
+
+input,textarea{
+	border: 1px solid #141414;
+	padding: 10px;
+}
+
+.form-send {
+  text-align: center;
+}
+
+.form-btn{
+  width: 235px;
+  height: 59px;
+  background-color: #1B1310;
+  color: #fff;
+  font-size: 20px;
+  font-weight: bold;
+  box-shadow: 0px 0px 6px #1B1310;
+  border-radius: 30px;
+  margin-top: 25px;
+  margin-bottom: 50px;
+}
+
+/* footer */
+footer {
+  height: 80px;
+  background-color: #1B1310;
+}
+
+.footer-ms {
+  font-size: 14px;
+  color: #fff;
+  text-align: center;
+  padding-top: 30px;
 }
